--- a/application/package.json
+++ b/application/package.json
@@ -28,6 +28,7 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.0.0",
         "react-redux": "^7.2.3",
+        "react-router-dom": "^6.2.1",
         "redux": "^4.0.5",
         "redux-saga": "^1.1.3"
     }
